testsuite/tests/typecheck/should_compile/Tc245_A.hs

{-# LANGUAGE TypeFamilies #-}
module Tc245_A where
class Foo a where
    data Bar a :: * -> *
